--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -529,5 +529,90 @@ document.addEventListener("click", (e) => {
 </script>
 
 
+
+<script>
+// 🔗 Captura UTMs e as adiciona a todos os links de saída
+(function() {
+  const params = new URLSearchParams(window.location.search);
+  if (!params.toString()) return;
+
+  // Monta a string de UTM
+  const utmString = params.toString();
+
+  // Percorre todos os links da página
+  document.querySelectorAll('a, button').forEach(el => {
+    const href = el.getAttribute('href');
+    if (href && href.includes('http')) {
+      // Se já tiver parâmetros, adiciona com &
+      const separator = href.includes('?') ? '&' : '?';
+      el.setAttribute('href', `${href}${separator}${utmString}`);
+    }
+
+    // Se o botão usa redirecionamento via JS:
+    if (el.onclick && el.onclick.toString().includes('window.location.href')) {
+      const match = el.onclick.toString().match(/window\.location\.href\s*=\s*['"](.*?)['"]/);
+      if (match) {
+        const link = match[1];
+        const separator = link.includes('?') ? '&' : '?';
+        const newLink = `${link}${separator}${utmString}`;
+        el.onclick = () => window.location.href = newLink;
+      }
+    }
+  });
+})();
+</script>
+
+
+
+<script>
+
+// Bloqueia pinça (touchmove com 2 dedos)
+document.addEventListener('touchmove', function(e) {
+  if (e.touches && e.touches.length > 1) {
+    e.preventDefault();
+  }
+}, { passive: false });
+
+// Bloqueia duplo-toque rápido
+let lastTouchEnd = 0;
+document.addEventListener('touchend', function(e) {
+  const now = Date.now();
+  if (now - lastTouchEnd <= 300) {
+    e.preventDefault();
+  }
+  lastTouchEnd = now;
+}, false);
+
+// Bloqueia gestos específicos no iOS
+document.addEventListener('gesturestart', function(e) {
+  e.preventDefault();
+});
+
+
+
+// Bloqueia o menu de contexto (clique direito)
+document.addEventListener('contextmenu', e => e.preventDefault());
+
+// Impede copiar/recortar/selecionar texto
+['copy','cut','selectstart','dragstart'].forEach(evt =>
+  document.addEventListener(evt, e => e.preventDefault())
+);
+
+// Bloqueia atalho Ctrl+C, Ctrl+U (ver fonte), Ctrl+S, Ctrl+P e F12
+document.addEventListener('keydown', e => {
+  const forbidden =
+    // combinações de Ctrl + C, U, S, P, A
+    (e.ctrlKey &&
+      ['c','u','s','p','a'].includes(e.key.toLowerCase()))
+    // F12
+    || e.key === 'F12';
+  if (forbidden) e.preventDefault();
+});
+
+
+
+</script>
+
+
 </body>
 </html>
