--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -147,6 +147,76 @@
   color: #fff;
   text-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
 }
+
+
+
+
+
+/* 🌡️ Termômetro lateral fixo */
+#thermometer {
+  position: fixed;
+  left: 20px;
+  bottom: 80px;
+  width: 30px;
+  height: 200px;
+  background: linear-gradient(to top, red, orange, yellow, limegreen);
+  border-radius: 30px;
+  border: 2px solid #333;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  display: none; /* escondido até a primeira pergunta */
+  z-index: 9999;
+}
+
+/* Interior transparente para preenchimento controlado */
+.thermo-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 30px;
+}
+
+/* O preenchimento (nível da inocência) */
+.thermo-fill {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(255,255,255,0.25);
+  height: 0%; /* controlado via JS */
+  transition: height 1s ease-in-out;
+}
+
+/* A bolinha na base */
+#thermometer::before {
+  content: "";
+  position: absolute;
+  bottom: -35px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60px;
+  height: 60px;
+  background: radial-gradient(circle at 30% 30%, #ff3333, #b30000);
+  border-radius: 50%;
+  border: 2px solid #333;
+  box-shadow: 0 0 10px rgba(255,0,0,0.6);
+}
+
+/* Setinha branca lateral */
+.thermo-arrow {
+  position: absolute;
+  right: -12px;
+  top: calc(100% - 10%);
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 10px solid white;
+  filter: drop-shadow(0 0 2px rgba(255,255,255,0.8));
+  transition: top 1s ease-in-out;
+}
+
+
   </style>
 
 
@@ -207,7 +277,7 @@
   border-radius: 16px;
   padding: 25px 20px;
   width: 90%;
-  max-width: 240px; /* mais estreita */
+  max-width: 280px; /* mais estreita */
   text-align: center;
   color: #fff;
   box-shadow: none; /* sem brilho */
@@ -325,14 +395,15 @@ document.getElementById("beginPortal").addEventListener("click", () => {
       document.getElementById("startBtn").style.display = "block";
     }
 
-    function startQuiz() {
-      document.querySelector('.gif-container').onclick = null;
-      document.getElementById("startBtn").style.display = "none";
-      document.getElementById("quizContent").style.display = "block";
-      document.getElementById("progressBar").style.display = "block";
-      playCurrentAudio();
-      updateTopProgress();
-    }
+function startQuiz() {
+  document.querySelector('.gif-container').onclick = null;
+  document.getElementById("startBtn").style.display = "none";
+  document.getElementById("quizContent").style.display = "block";
+  document.getElementById("progressBar").style.display = "block";
+  showThermometer(); // ✅ Mostra o termômetro assim que o quiz começa
+  playCurrentAudio();
+  updateTopProgress();
+}
 
     function playCurrentAudio() {
       const question = questions[currentQuestion];
@@ -363,14 +434,48 @@ document.getElementById("beginPortal").addEventListener("click", () => {
       answersDiv.style.display = "block";
     }
 
-    function handleAnswer(selectedIndex) {
-      currentQuestion++;
-      if (currentQuestion < questions.length) {
-        loadNextQuestion();
-      } else {
-        showResult();
-      }
-    }
+
+
+function handleAnswer(selectedIndex) {
+  currentQuestion++;
+
+  if (currentQuestion < questions.length) {
+    loadNextQuestion();
+    updateThermometer(); // 🔥 Atualiza o nível
+  } else {
+    hideThermometer(); // ❌ Some ao terminar
+    document.getElementById("progressBar").style.display = "none";
+    showResult();
+  }
+}
+
+// 🔥 Termômetro de Inocência
+const thermometer = document.getElementById("thermometer");
+const thermoFill = document.getElementById("thermoFill");
+const thermoArrow = document.querySelector(".thermo-arrow");
+
+// Define os níveis do termômetro em cada pergunta (0 a 100)
+const thermometerLevels = [20, 55, 40, 30, 85]; 
+// 1ª: vermelho | 2ª: sobe | 3ª e 4ª: desce | 5ª: sobe quase no topo
+
+function showThermometer() {
+  thermometer.style.display = "block";
+  updateThermometer();
+}
+
+function updateThermometer() {
+  const level = thermometerLevels[currentQuestion];
+  if (level !== undefined) {
+    thermoFill.style.height = `${level}%`;
+    thermoArrow.style.top = `${100 - level}%`;
+  }
+}
+
+function hideThermometer() {
+  thermometer.style.display = "none";
+}
+
+
 
     function loadNextQuestion() {
       document.getElementById("answers").style.display = "none";
@@ -609,9 +714,16 @@ document.addEventListener('keydown', e => {
   if (forbidden) e.preventDefault();
 });
 
-
-
 </script>
+
+
+<!-- 🌡️ Termômetro de Inocência -->
+<div id="thermometer">
+  <div class="thermo-inner">
+    <div class="thermo-fill" id="thermoFill"></div>
+    <div class="thermo-arrow"></div>
+  </div>
+</div>
 
 
 </body>
