--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -152,69 +152,93 @@
 
 
 
-/* 🌡️ Termômetro lateral fixo */
-#thermometer {
+/* 🌡️ Contêiner geral do termômetro + legenda */
+#thermometer-container {
   position: fixed;
   left: 20px;
-  bottom: 80px;
-  width: 30px;
-  height: 200px;
-  background: linear-gradient(to top, red, orange, yellow, limegreen);
-  border-radius: 30px;
-  border: 2px solid #333;
-  box-shadow: 0 0 10px rgba(0,0,0,0.4);
-  display: none; /* escondido até a primeira pergunta */
+  bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   z-index: 9999;
 }
 
-/* Interior transparente para preenchimento controlado */
+/* 🔋 Termômetro minimalista e elegante */
+#thermometer {
+  width: 14px;
+  height: 120px;
+  background: linear-gradient(to top, #1a1a1a, #222);
+  border-radius: 10px;
+  border: 1px solid rgba(255,255,255,0.1);
+  box-shadow: 0 0 12px rgba(0,255,200,0.25);
+  display: none;
+}
+
+/* Interior com leve brilho interno */
 .thermo-inner {
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  border-radius: 30px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 8px rgba(0,255,200,0.3);
 }
 
-/* O preenchimento (nível da inocência) */
+/* Preenchimento (nível de inocência) — verde neon futurista */
 .thermo-fill {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  background: rgba(255,255,255,0.25);
-  height: 0%; /* controlado via JS */
+  background: linear-gradient(to top, #00ffcc, #00bfff);
+  height: 0%;
   transition: height 1s ease-in-out;
+  box-shadow: 0 0 10px rgba(0,255,200,0.6);
 }
 
-/* A bolinha na base */
+/* Base luminosa */
 #thermometer::before {
   content: "";
   position: absolute;
-  bottom: -35px;
+  bottom: -18px;
   left: 50%;
   transform: translateX(-50%);
-  width: 60px;
-  height: 60px;
-  background: radial-gradient(circle at 30% 30%, #ff3333, #b30000);
+  width: 28px;
+  height: 28px;
+  background: radial-gradient(circle at 30% 30%, #00ffcc, #007777);
   border-radius: 50%;
-  border: 2px solid #333;
-  box-shadow: 0 0 10px rgba(255,0,0,0.6);
+  border: 1px solid rgba(255,255,255,0.2);
+  box-shadow: 0 0 15px rgba(0,255,200,0.7);
 }
 
-/* Setinha branca lateral */
+/* Indicador lateral branco discreto */
 .thermo-arrow {
   position: absolute;
-  right: -12px;
+  right: -10px;
   top: calc(100% - 10%);
   width: 0;
   height: 0;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-left: 10px solid white;
-  filter: drop-shadow(0 0 2px rgba(255,255,255,0.8));
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 7px solid #fff;
+  opacity: 0.8;
+  filter: drop-shadow(0 0 2px rgba(255,255,255,0.6));
   transition: top 1s ease-in-out;
 }
+
+/* Texto abaixo — “Nível de Inocência” */
+#thermo-label {
+  font-size: 0.6em;
+  color: rgba(255,255,255,0.7);
+  margin-top: 8px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+  text-shadow: 0 0 6px rgba(0,255,200,0.3);
+}
+
+
+
 
 
   </style>
@@ -436,40 +460,24 @@ document.getElementById("beginPortal").addEventListener("click", () => {
 
 
 
-    function handleAnswer(selectedIndex) {
+function handleAnswer(selectedIndex) {
   currentQuestion++;
+
   if (currentQuestion < questions.length) {
     loadNextQuestion();
-    updateThermometer(); // 🔥 Atualiza o nível
+    updateThermometer();
   } else {
-    hideThermometer(); // 🔕 Some ao terminar
-    showResult();
+    // Garante que a interface zere antes de ir para o pitch final
+    document.getElementById("answers").style.display = "none";
+    document.getElementById("questionText").style.display = "none";
+    hideThermometer();
+
+    // Dá um pequeno delay para transição suave
+    setTimeout(() => {
+      showResult();
+    }, 500);
   }
 }
-
-// 🔥 Termômetro de Inocência
-const thermometer = document.getElementById("thermometer");
-const thermoFill = document.getElementById("thermoFill");
-const thermoArrow = document.querySelector(".thermo-arrow");
-
-// Define os níveis do termômetro em cada pergunta (0 a 100)
-const thermometerLevels = [20, 55, 40, 30, 85]; 
-// 1ª: vermelho | 2ª: sobe | 3ª e 4ª: desce | 5ª: sobe quase no topo
-
-function updateThermometer() {
-  thermometer.style.display = "block";
-  const level = thermometerLevels[currentQuestion];
-  thermoFill.style.height = `${level}%`;
-  thermoArrow.style.top = `${100 - level}%`;
-}
-
-function hideThermometer() {
-  thermometer.style.display = "none";
-}
-
-
-
-
 
 
     function loadNextQuestion() {
@@ -713,13 +721,37 @@ document.addEventListener('keydown', e => {
 
 
 <!-- 🌡️ Termômetro de Inocência -->
-<div id="thermometer">
-  <div class="thermo-inner">
-    <div class="thermo-fill" id="thermoFill"></div>
-    <div class="thermo-arrow"></div>
+<div id="thermometer-container">
+  <div id="thermometer">
+    <div class="thermo-inner">
+      <div class="thermo-fill" id="thermoFill"></div>
+      <div class="thermo-arrow"></div>
+    </div>
+    <p id="thermo-label">Nível de Inocência</p>
   </div>
 </div>
 
+<script>
+// 🔥 Termômetro de Inocência
+const thermometer = document.getElementById("thermometer");
+const thermoFill = document.getElementById("thermoFill");
+const thermoArrow = document.querySelector(".thermo-arrow");
+
+// Define os níveis do termômetro em cada pergunta (0 a 100)
+const thermometerLevels = [20, 55, 40, 30, 85]; 
+// 1ª: vermelho | 2ª: sobe | 3ª e 4ª: desce | 5ª: sobe quase no topo
+
+function updateThermometer() {
+  thermometer.style.display = "block";
+  const level = thermometerLevels[currentQuestion];
+  thermoFill.style.height = `${level}%`;
+  thermoArrow.style.top = `${100 - level}%`;
+}
+
+function hideThermometer() {
+  thermometer.style.display = "none";
+}
+</script>
 
 </body>
 </html>
