--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -157,12 +157,11 @@
 #thermometer-container {
   position: fixed;
   left: 20px;
-  bottom: 180px; /* 🔼 antes era 40px — agora sobe mais */
+  bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   z-index: 9999;
-  transition: bottom 0.4s ease; /* 🔄 movimento suave se quiser animar depois */
 }
 
 /* 🔋 Termômetro minimalista fino */
