--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -397,21 +397,21 @@ document.getElementById("beginPortal").addEventListener("click", () => {
       },
       {
         text: "Eu nem chamaria de amigo...",
-        options: ["Prova Social", "Autoridade", "Medo"],
+        options: ["Reciprocidade", "Autoridade", "Medo"],
         correct: 0,
         audio: "https://static.wixstatic.com/mp3/7f5efc_02c932a98ba940de96496fcbc7d72bd9.mp3",
         gif: "https://static.wixstatic.com/media/7f5efc_65ecff36c016466f86572c9701297323~mv2.gif"
       },
       {
         text: "Me prova que sabe...",
-        options: ["Reciprocidade", "Curiosidade", "Escassez"],
-        correct: 0,
+        options: ["Ira", "Raiva", "Recompensa"],
+        correct: 2,
         audio: "https://static.wixstatic.com/mp3/7f5efc_d4565de85cfe47e182eb158a74424204.mp3",
         gif: "https://static.wixstatic.com/media/7f5efc_356fcdf2e88344ea95e2f7d8e218c018~mv2.gif"
       },
       {
         text: "Te peguei não é mesmo?",
-        options: ["Medo", "Urgência", "Prova Social"],
+        options: ["Medo", "Autonomia", "Chantagem"],
         correct: 1,
         audio: "https://static.wixstatic.com/mp3/7f5efc_42f722c97490452f9c83c23d29c49329.mp3",
         gif: "https://static.wixstatic.com/media/7f5efc_8e1f897492c6474d880adf2ad3182ac5~mv2.gif"
